fix scroll overflow-y auto on mobile devices

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -3,7 +3,7 @@ body, #root {
   width: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+/*  overflow: hidden;*/
   background: 
     url("https://www.transparenttextures.com/patterns/circles.png") repeat,
     linear-gradient(135deg, #0f0c29 0%, #3f3db0 50%, #24243e 100%);
